--- a/src/pug/kosik-1.pug
+++ b/src/pug/kosik-1.pug
@@ -49,7 +49,7 @@ html(lang=lang)
                                                     
                                                     .cart-item-stepper.stepper 
                                                         span.minus -
-                                                        input(id="qty-stepper-input-1" class="num_items" type="number" value="1" min="1" max="100" step="1" aria-label="Počet položek" required) 
+                                                        input(id="qty-stepper-input-1" class="num_items" type="number" value="2" min="2" max="100" step="2" aria-label="Počet položek" required readonly) 
                                                         span.plus +
                                                     
                                                     .cart-item-prices 
@@ -73,7 +73,7 @@ html(lang=lang)
                                                     
                                                     .cart-item-stepper.stepper 
                                                         span.minus -
-                                                        input(id="qty-stepper-input-1" class="num_items" type="number" value="1" min="1" max="100" step="1" aria-label="Počet položek" required) 
+                                                        input(id="qty-stepper-input-1" class="num_items" type="number" value="1" min="1" max="100" step="1" aria-label="Počet položek" required readonly) 
                                                         span.plus +
                                                     
                                                     .cart-item-prices 
@@ -98,7 +98,7 @@ html(lang=lang)
                                                     
                                                     .cart-item-stepper.stepper 
                                                         span.minus -
-                                                        input(id="qty-stepper-input-1" class="num_items" type="number" value="1" min="1" max="100" step="1" aria-label="Počet položek" required) 
+                                                        input(id="qty-stepper-input-1" class="num_items" type="number" value="1" min="1" max="100" step="1" aria-label="Počet položek" required readonly) 
                                                         span.plus +
                                                     
                                                     .cart-item-prices 
