--- a/src/pug/kosik-3.pug
+++ b/src/pug/kosik-3.pug
@@ -141,7 +141,7 @@ html(lang=lang)
 
                             .cart-aside__footer
 
-                                button.btn.--cart(name="nextstep" form="cart-form-user") Souhrn objednávky #[img(src="/img/icons/cheveron-white.svg" alt="Pokračovat")]
+                                a.btn.--cart(href="/")  Souhrn objednávky #[img(src="/img/icons/cheveron-white.svg" alt="Pokračovat")]
 
                                 a.cart-aside__footer-link(href="/") 
                                     .cart-table__footer-icon
