--- a/src/pug/kosik-4.pug
+++ b/src/pug/kosik-4.pug
@@ -49,7 +49,7 @@ html(lang=lang)
                                         .cart-summary__item-qty 2 ks
                                         .cart-summary__item-price 2 236 Kč
 
-                                .cart-summary__item 
+                                .cart-summary__item.--unavailable
                                     img.cart-summary__img(src="/img/product-thumb-small.jpg" alt="#{ProductName}")
                                     .cart-summary__item-content
                                         .cart-summary__item-title #{ProductName} #[span Zelená barva s neprůhlednými dvířky]
