--- a/src/pug/kosik-4.pug
+++ b/src/pug/kosik-4.pug
@@ -80,26 +80,7 @@ html(lang=lang)
                                             td Celková cena s DPH
                                             td 2 354 Kč
 
-                                .cart-summary__table
-                                    table
-                                        thead 
-                                            tr 
-                                                th Osobní údaje
-                                                th
-                                        tbody 
 
-                                            tr  
-                                                td Jméno
-                                                td test
-                                            tr  
-                                                td Příjmení
-                                                td test
-                                            tr  
-                                                td Telefon
-                                                td 123 456 789
-                                            tr  
-                                                td E-mail
-                                                td test@test.cz
                                 .cart-summary__table
                                     table
                                         thead 
@@ -123,6 +104,12 @@ html(lang=lang)
                                             tr  
                                                 td PSČ
                                                 td 190 00
+                                            tr  
+                                                td Telefon
+                                                td 123 456 789
+                                            tr  
+                                                td E-mail
+                                                td test@test.cz
 
 
                                 .cart-summary__table
@@ -151,6 +138,20 @@ html(lang=lang)
                                             tr  
                                                 td PSČ
                                                 td 190 00
+
+
+                                .cart-summary__table
+                                    table
+                                        thead 
+                                            tr
+                                                th Objednávku vytvořil: obchodní zástupce
+                                                th
+                                        tbody 
+                                            
+                                            tr  
+                                                td Jméno a příjmení
+                                                td test
+
 
                                 .cart-summary__footer
                                     .form-group     
