--- a/src/pug/kosik-4.pug
+++ b/src/pug/kosik-4.pug
@@ -121,13 +121,10 @@ html(lang=lang)
                                         tbody 
                                             
                                             tr  
-                                                td Název firmy
+                                                td Jméno
                                                 td test
                                             tr  
-                                                td IČO
-                                                td test
-                                            tr  
-                                                td DIČ
+                                                td Příjmení
                                                 td test
                                             tr  
                                                 td Ulice, č. p.
@@ -138,6 +135,12 @@ html(lang=lang)
                                             tr  
                                                 td PSČ
                                                 td 190 00
+                                            tr  
+                                                td Telefon
+                                                td 123 456 789
+                                            tr  
+                                                td E-mail
+                                                td test@test.cz
 
 
                                 .cart-summary__table
