--- a/src/pug/ucet-historie.pug
+++ b/src/pug/ucet-historie.pug
@@ -12,106 +12,113 @@ html(lang=lang)
             main
                 include components/_breadcrumbs.pug
 
-                .page.--narrow
+                .page
                     section.page-heading
-                
-                        h1 Historie objednávek
+                        .container          
+                            h1 Historie objednávek
 
                     section.page-content
+                        .container
 
-                        .order-history 
-                            table
-                                thead 
-                                    th Datum 
-                                    th Číslo nákupu
-                                    th Cena
-                                    th Stav
-                                    th Stav
+                            .order-history 
+                                table
+                                    thead 
+                                        th Datum 
+                                        th Číslo nákupu
+                                        th Cena
+                                        th Externí kod objednávky
+                                        th Vytvořil
+                                        th Stav
+                                        th 
 
-                        
-                                tbody
-                                    tr.order-history__item(id="detail-1") 
-                                        td 1. 1. 1970
-                                        td 1598879
-                                        td 16 999 Kč
-                                        td.--finished Dokončeno
-                                        td #[a(href="#detail-1") Detail]
+                            
+                                    tbody
+                                        tr.order-history__item(id="detail-1") 
+                                            td 1. 1. 1970
+                                            td 1598879
+                                            td 16 999 Kč
+                                            td 21656436
+                                            td Petr Novák
+                                            td.--finished Dokončeno
+                                            td #[a(href="#detail-1") Detail]
 
-                                        
-                                    tr.order-history__item-detail
-                                        td(colspan="5")
-                                            table 
-                                                tr
-                                                    td(colspan="2")
-                                                        img(src="/img/product-thumb-large.jpg" alt="#")
-                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
-                                                    td 
-                                                        span 3 ks
-                                                    td
-                                                        span 5 999 Kč
-                                                    td 
-                                                        span.--status 3/3 odesláno
+                                            
+                                        tr.order-history__item-detail
+                                            td(colspan="7")
+                                                table 
+                                                    tr
+                                                        td(colspan="3")
+                                                            img(src="/img/product-thumb-large.jpg" alt="#")
+                                                            a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
+                                                        td 
+                                                            span 3 ks
+                                                        td
+                                                            span 5 999 Kč
+                                                        td 
+                                                            span.--status 3/3 odesláno
 
-                                                tr
-                                                    td(colspan="2")
-                                                        img(src="/img/product-thumb-large.jpg" alt="#")
-                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ
-                                                    td 
-                                                        span 3 ks
-                                                    td
-                                                        span 5 999 Kč
-                                                    td 
-                                                        span.--status 2/3 odesláno
+                                                    tr
+                                                        td(colspan="3")
+                                                            img(src="/img/product-thumb-large.jpg" alt="#")
+                                                            a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ
+                                                        td 
+                                                            span 3 ks
+                                                        td
+                                                            span 5 999 Kč
+                                                        td 
+                                                            span.--status 2/3 odesláno
 
-                                                tr
+                                                    tr
 
-                                                    td(colspan="5")
-                                                        .order-history__files
-                                                            a(href="#") faktura_148945.pdf 
-                                                            a(href="#") faktura_148945.pdf 
-                                                            a(href="#") faktura_148945.pdf 
+                                                        td(colspan="7")
+                                                            .order-history__files
+                                                                a(href="#") faktura_148945.pdf 
+                                                                a(href="#") faktura_148945.pdf 
+                                                                a(href="#") faktura_148945.pdf 
 
-  
-                                    tr.order-history__item(id="detail-2") 
-                                        td 1. 1. 1970
-                                        td 1598879
-                                        td 16 999 Kč
-                                        td.--finished Dokončeno
-                                        td #[a(href="#detail-2") Detail]
+    
+                                        tr.order-history__item(id="detail-2") 
+                                            td 1. 1. 1970
+                                            td 1598879
+                                            td 16 999 Kč
+                                            td 21656436
+                                            td Petr Novák
+                                            td.--finished Dokončeno
+                                            td #[a(href="#detail-2") Detail]
 
-                                        
-                                    tr.order-history__item-detail
-                                        td(colspan="5")
-                                            table 
-                                                tr
-                                                    td(colspan="2")
-                                                        img(src="/img/product-thumb-large.jpg" alt="#")
-                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
-                                                    td 
-                                                        span 3 ks
-                                                    td
-                                                        span 5 999 Kč
-                                                    td 
-                                                        span.--status 3/3 odesláno
+                                            
+                                        tr.order-history__item-detail
+                                            td(colspan="7")
+                                                table 
+                                                    tr
+                                                        td(colspan="2")
+                                                            img(src="/img/product-thumb-large.jpg" alt="#")
+                                                            a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
+                                                        td 
+                                                            span 3 ks
+                                                        td
+                                                            span 5 999 Kč
+                                                        td 
+                                                            span.--status 3/3 odesláno
 
-                                                tr
-                                                    td(colspan="2")
-                                                        img(src="/img/product-thumb-large.jpg" alt="#")
-                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ
-                                                    td 
-                                                        span 3 ks
-                                                    td
-                                                        span 5 999 Kč
-                                                    td 
-                                                        span.--status 2/3 odesláno
+                                                    tr
+                                                        td(colspan="2")
+                                                            img(src="/img/product-thumb-large.jpg" alt="#")
+                                                            a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ
+                                                        td 
+                                                            span 3 ks
+                                                        td
+                                                            span 5 999 Kč
+                                                        td 
+                                                            span.--status 2/3 odesláno
 
-                                                tr
+                                                    tr
 
-                                                    td(colspan="5")
-                                                        .order-history__files
-                                                            a(href="#") faktura_148945.pdf 
-                                                            a(href="#") faktura_148945.pdf 
-                                                            a(href="#") faktura_148945.pdf 
+                                                        td(colspan="7")
+                                                            .order-history__files
+                                                                a(href="#") faktura_148945.pdf 
+                                                                a(href="#") faktura_148945.pdf 
+                                                                a(href="#") faktura_148945.pdf 
 
         
         include components/_footer.pug
