--- a/src/pug/ucet-faktury.pug
+++ b/src/pug/ucet-faktury.pug
@@ -92,13 +92,103 @@ html(lang=lang)
 
 
                             .tabcontent(id="2" style="display: none;")
+                                .user-files-table 
+                                    table 
+                                        tr
+                                            th Číslo FV 
+                                            th Externí číslo
+                                            th Datum vystavení
+                                            th Datum splatnost
+                                            th Částka bez DPH
+                                            th Zbývá k úhradě
+                                            th Datum úhrady
+                                            th Dnů po splatnosti
+                                            th Stav faktury
+                                        tr 
+                                            td Jméno
+                                            td test
+                                            td Jméno
+                                            td test
+                                            td Jméno
+                                            td test
+                                            td test
+                                            td.--bold test
+                                            td.--red test         
+
+
+
 
                             .tabcontent(id="3" style="display: none;")
-
+                                .user-files-table 
+                                    table 
+                                        tr
+                                            th Číslo FV 
+                                            th Externí číslo
+                                            th Datum vystavení
+                                            th Datum splatnost
+                                            th Částka bez DPH
+                                            th Zbývá k úhradě
+                                            th Datum úhrady
+                                            th Dnů po splatnosti
+                                            th Stav faktury
+                                        tr 
+                                            td Jméno
+                                            td test
+                                            td Jméno
+                                            td test
+                                            td Jméno
+                                            td test
+                                            td test
+                                            td.--bold test
+                                            td.--red test         
                             .tabcontent(id="4" style="display: none;")
-                            
+                                .user-files-table 
+                                    table 
+                                        tr
+                                            th Číslo FV 
+                                            th Externí číslo
+                                            th Datum vystavení
+                                            th Datum splatnost
+                                            th Částka bez DPH
+                                            th Zbývá k úhradě
+                                            th Datum úhrady
+                                            th Dnů po splatnosti
+                                            th Stav faktury
+                                        tr 
+                                            td Jméno
+                                            td test
+                                            td Jméno
+                                            td test
+                                            td Jméno
+                                            td test
+                                            td test
+                                            td.--bold test
+                                            td.--red test                             
                             .tabcontent(id="5" style="display: none;")
-        
+                                .user-files-table 
+                                    table 
+                                        tr
+                                            th Číslo FV 
+                                            th Externí číslo
+                                            th Datum vystavení
+                                            th Datum splatnost
+                                            th Částka bez DPH
+                                            th Zbývá k úhradě
+                                            th Datum úhrady
+                                            th Dnů po splatnosti
+                                            th Stav faktury
+                                        tr 
+                                            td Jméno
+                                            td test
+                                            td Jméno
+                                            td test
+                                            td Jméno
+                                            td test
+                                            td test
+                                            td.--bold test
+                                            td.--red test   
+                                            
+                                                  
         include components/_footer.pug
 
         include template/_scripts.pug  
