--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -40,6 +40,7 @@ header
                         img(src="/img/icons/user.svg" alt="Přihlášení")
                     .user__wrap
                         .user__title Petrllorem Novákloremips
+                        .user__company Apple Inc.
                     .user__dropdown(id="userDropdown")
                         a.--bold(href="/login-splashscreen-alt.html") Změnit firmu
                         a(href="/uzivatelsky-ucet.html") Uživatelský účet
