--- a/src/pug/kosik-4.pug
+++ b/src/pug/kosik-4.pug
@@ -168,7 +168,7 @@ html(lang=lang)
 
                                     .form-group.--checkbox
                                         label(for="order-agree2") Souhlasím s #[a(href="#") obchodními podmínkami]
-                                        input(type="checkbox" name="order-agree2" id="order-agree2")
+                                        input(type="checkbox" name="order-agree2" id="order-agree2" required)
 
                                     button.btn.--cart(name="finish-order") Odeslat objednávku
 
