--- a/src/pug/kosik-4.pug
+++ b/src/pug/kosik-4.pug
@@ -159,7 +159,7 @@ html(lang=lang)
                                 .cart-summary__footer
                                     .form-group     
                                         label(for="order-ordernum") Zákaznické číslo objednávky
-                                        input(type="text" id="order-ordernum" name="order-ordernum" required)
+                                        input(type="text" id="order-ordernum" name="order-ordernum")
 
                                     .form-group     
                                         label(for="order-text") Poznámka k objednávce
