--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1056,3 +1056,14 @@ body.--activeProductCarousel #productGalleryBackdrop {
       overflow: hidden;
       line-height: 1.2;
   }
+
+
+  #productGallery .slider-item-ratio .slider-container>*>*{
+    object-fit: contain;
+  }
+  #productGallery .slider-container>*{
+    background: #fafafa
+  }
+  #productGallery #pgallery.slider-item-ratio-1x1{
+        --swiffy-slider-item-ratio: 4/3
+  }  
