--- a/src/pug/login-splashscreen-alt.pug
+++ b/src/pug/login-splashscreen-alt.pug
@@ -32,16 +32,13 @@ html(lang=lang)
                                     .btn.btn-secondary Zvolit firmu
 
                         script.
-
                             document.addEventListener('click', function(e) {
-                            var content = document.querySelector('.page.--narrow');
-                            var clickedElement = e.target;
-
-                            // Check if the clicked element is not within the .content div and is a link
-                            if (!content.contains(clickedElement) && clickedElement.closest('a')) {
-                                e.preventDefault(); // Prevent the default link behavior
-                                location.reload(); // Reload the page
-                            }
+                                var content = document.querySelector('.page.--narrow');
+                                var clickedElement = e.target;
+                                if (!content.contains(clickedElement) && clickedElement.closest('a')) {
+                                    e.preventDefault();
+                                    location.reload(); 
+                                }
                             });
 
         include components/_footer.pug
