--- a/src/pug/components/_searchAutocomplete.pug
+++ b/src/pug/components/_searchAutocomplete.pug
@@ -2,7 +2,12 @@
     .searchAutocomplete__section 
         .searchAutocomplete__title Produkty
         .searchAutocomplete__item 
-            a.searchAutocomplete__link(href="/produkt-detail.html") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
+            a.searchAutocomplete__link(href="/produkt-detail.html") 
+                strong 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
+                .searchAutocomplete__linkSub
+                    span Kód produktu: 123465
+                    span Skladem 10ks
+
         .searchAutocomplete__item 
             a.searchAutocomplete__link(href="/produkt-detail.html") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
         .searchAutocomplete__item 
