--- a/src/scss/components/_searchAutocomplete.scss
+++ b/src/scss/components/_searchAutocomplete.scss
@@ -33,10 +33,20 @@
     font-weight: 400;
     color: $gray-900;
     display: flex;
+    flex-direction: column;
+    border-top: 1px solid #f4f4f6;
 
     &:hover, &:active, &:focus{
         background: $gray-100;
     }
+}
+.searchAutocomplete__linkSub{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    font-size: 13px;
+    padding-top: 4px;
+    opacity: 0.85;
 }
 @media screen and (max-width: 991px){
     .searchAutocomplete {
