--- a/src/pug/components/_searchAutocomplete.pug
+++ b/src/pug/components/_searchAutocomplete.pug
@@ -6,7 +6,7 @@
                 strong 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
                 .searchAutocomplete__linkSub
                     span Kód produktu: 123465
-                    span Skladem 10ks
+                    span.--available Skladem 10ks
 
         .searchAutocomplete__item 
             a.searchAutocomplete__link(href="/produkt-detail.html") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
