--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1137,3 +1137,34 @@ body.--activeProductCarousel #productGalleryBackdrop {
       }
     }
     
+
+    .footer__icons{
+        display: flex;
+        gap: 10px;
+        padding-top: 15px;
+      }
+      .footer__icons img{
+        height: 40px;
+      }
+      .nav-submenu{
+        display: none;
+      }
+        .lightbox{
+          opacity: 1; 
+          visibility: visible;
+          transition: all 0s ease;
+        }
+        .fotogalerie-wrap{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 10px;
+        margin: 60px 0 0 0;
+      }
+      .fotogalerie-wrap img{
+        aspect-ratio: 4/3;
+      }
+      @media screen and (max-width: 575px){
+        .fotogalerie-wrap{
+        grid-template-columns: 1fr 1fr;
+      }
+      }
