--- a/src/scss/components/_product-detail.scss
+++ b/src/scss/components/_product-detail.scss
@@ -110,6 +110,7 @@
 .product-detail__title{
     font-size: 28px;
     padding-bottom: 20px;
+    text-transform: none;
 }
 .product-detail__code{
     font-size: 14px;
